stage one in facade neo4j node to deal with depreciations