@@ -3,18 +3,15 @@ package com.tramchester.integration.graph.railAndTram;
 import com.google.common.collect.Lists;
 import com.tramchester.ComponentContainer;
 import com.tramchester.ComponentsBuilder;
-import com.tramchester.domain.Route;
-import com.tramchester.domain.Service;
 import com.tramchester.domain.id.IdFor;
 import com.tramchester.domain.id.IdSet;
-import com.tramchester.domain.input.Trip;
 import com.tramchester.domain.places.InterchangeStation;
 import com.tramchester.domain.places.RouteStation;
 import com.tramchester.domain.places.Station;
 import com.tramchester.domain.reference.TransportMode;
 import com.tramchester.graph.GraphDatabase;
+import com.tramchester.graph.GraphNode;
 import com.tramchester.graph.GraphQuery;
-import com.tramchester.graph.TransportRelationshipTypes;
 import com.tramchester.graph.graphbuild.GraphLabel;
 import com.tramchester.graph.graphbuild.GraphProps;
 import com.tramchester.graph.graphbuild.StagedTransportGraphBuilder;
@@ -23,7 +20,6 @@ import com.tramchester.integration.testSupport.rail.RailStationIds;
 import com.tramchester.integration.testSupport.tram.IntegrationTramTestConfig;
 import com.tramchester.repository.InterchangeRepository;
 import com.tramchester.repository.StationRepository;
-import com.tramchester.repository.TransportData;
 import com.tramchester.testSupport.TestEnv;
 import com.tramchester.testSupport.testTags.GMTest;
 import org.assertj.core.util.Streams;
@@ -33,8 +29,6 @@ import org.neo4j.graphdb.*;
 import java.time.Duration;
 import java.util.List;
 import java.util.Set;
-import java.util.SortedSet;
-import java.util.TreeSet;
 import java.util.stream.Collectors;
 
 import static com.tramchester.graph.TransportRelationshipTypes.*;
@@ -45,7 +39,6 @@ import static org.junit.jupiter.api.Assertions.*;
 class RailAndTramGraphBuilderTest {
     private static ComponentContainer componentContainer;
 
-    private TransportData transportData;
     private Transaction txn;
     private GraphQuery graphQuery;
     private StationRepository stationRepository;
@@ -59,8 +52,6 @@ class RailAndTramGraphBuilderTest {
 
     @BeforeEach
     void beforeEachTestRuns() {
-
-        transportData = componentContainer.get(TransportData.class);
 
         graphQuery = componentContainer.get(GraphQuery.class);
         stationRepository = componentContainer.get(StationRepository.class);
@@ -84,7 +75,7 @@ class RailAndTramGraphBuilderTest {
     @Test
     void shouldHaveLinkRelationshipsCorrectForInterchange() {
         Station cornbrook = Cornbrook.from(stationRepository);
-        Node cornbrookNode = graphQuery.getStationNode(txn, cornbrook);
+        GraphNode cornbrookNode = graphQuery.getStationNode(txn, cornbrook);
         Iterable<Relationship> outboundLinks = cornbrookNode.getRelationships(Direction.OUTGOING, LINKED);
 
         List<Relationship> list = Lists.newArrayList(outboundLinks);
@@ -104,7 +95,7 @@ class RailAndTramGraphBuilderTest {
         Set<RouteStation> routeStations = stationRepository.getRouteStationsFor(Piccadilly.getId());
 
         routeStations.forEach(routeStation -> {
-            Node node = graphQuery.getRouteStationNode(txn, routeStation);
+            GraphNode node = graphQuery.getRouteStationNode(txn, routeStation);
 
             Relationship toStation = node.getSingleRelationship(ROUTE_TO_STATION, Direction.OUTGOING);
             Duration costToStation = GraphProps.getCost(toStation);
@@ -124,24 +115,24 @@ class RailAndTramGraphBuilderTest {
 
         Duration expectedCost = Duration.ofMinutes(1);
 
-        Node altyTramNode = graphQuery.getStationNode(txn, altyTram);
-        Node altyTrainNode = graphQuery.getStationNode(txn, altyTrain);
+        GraphNode altyTramNode = graphQuery.getStationNode(txn, altyTram);
+        GraphNode altyTrainNode = graphQuery.getStationNode(txn, altyTrain);
 
         assertNotNull(altyTramNode);
         assertNotNull(altyTrainNode);
 
-        List<Relationship> fromTram = Streams.stream(altyTramNode.getRelationships(Direction.OUTGOING, NEIGHBOUR)).collect(Collectors.toList());
+        List<Relationship> fromTram = Streams.stream(altyTramNode.getRelationships(Direction.OUTGOING, NEIGHBOUR)).toList();
         assertEquals(1, fromTram.size(), "Wrong number of neighbours " + fromTram);
 
         Relationship tramNeighbour = fromTram.get(0);
-        assertEquals(altyTrainNode.getId(), tramNeighbour.getEndNode().getId());
+        assertEquals(altyTrainNode, GraphNode.fromEnd(tramNeighbour));
         assertEquals(expectedCost, GraphProps.getCost(tramNeighbour));
 
-        List<Relationship> fromTrain = Streams.stream(altyTrainNode.getRelationships(Direction.OUTGOING, NEIGHBOUR)).collect(Collectors.toList());
+        List<Relationship> fromTrain = Streams.stream(altyTrainNode.getRelationships(Direction.OUTGOING, NEIGHBOUR)).toList();
         assertEquals(1, fromTrain.size(), "Wrong number of neighbours " + fromTram);
 
         Relationship trainNeighbour = fromTrain.get(0);
-        assertEquals(altyTramNode.getId(), trainNeighbour.getEndNode().getId());
+        assertEquals(altyTramNode, GraphNode.fromEnd(trainNeighbour));
         assertEquals(expectedCost, GraphProps.getCost(trainNeighbour));
 
     }
@@ -235,45 +226,45 @@ class RailAndTramGraphBuilderTest {
 //        checkInboundConsistency(station, route);
 //    }
 
-    private void checkInboundConsistency(Station station, Route route) {
-        RouteStation routeStation = stationRepository.getRouteStation(station, route);
-        assertNotNull(routeStation, "Could not find a route for " + station.getId() + " and  " + route.getId());
-        List<Relationship> inbounds = graphQuery.getRouteStationRelationships(txn, routeStation, Direction.INCOMING);
-
-        List<Relationship> graphTramsIntoStation = inbounds.stream().
-                filter(inbound -> inbound.isType(TransportRelationshipTypes.TRAM_GOES_TO)).collect(Collectors.toList());
-
-        long boardingCount = inbounds.stream().
-                filter(relationship -> relationship.isType(TransportRelationshipTypes.BOARD)
-                        || relationship.isType(TransportRelationshipTypes.INTERCHANGE_BOARD)).count();
-        assertEquals(1, boardingCount);
-
-        SortedSet<IdFor<Service>> graphInboundSvcIds = graphTramsIntoStation.stream().
-                map(GraphProps::getServiceId).collect(Collectors.toCollection(TreeSet::new));
-
-        Set<Trip> callingTrips =
-                transportData.getRouteById(route.getId()).getTrips().stream().
-                filter(trip -> trip.callsAt(station)). // calls at , but not starts at because no inbound for these
-                //filter(trip -> !trip.getStopCalls().getStopBySequenceNumber(trip.getSeqNumOfFirstStop()).getStation().equals(station)).
-                filter(trip -> !trip.getStopCalls().getFirstStop().getStation().equals(station)).
-                collect(Collectors.toSet());
-
-        SortedSet<IdFor<Service>> svcIdsFromCallingTrips = callingTrips.stream().
-                map(trip -> trip.getService().getId()).collect(Collectors.toCollection(TreeSet::new));
-
-        assertEquals(svcIdsFromCallingTrips, graphInboundSvcIds);
-
-        Set<IdFor<Trip>> graphInboundTripIds = graphTramsIntoStation.stream().
-                map(GraphProps::getTripId).
-                collect(Collectors.toSet());
-
-        assertEquals(graphTramsIntoStation.size(), graphInboundTripIds.size()); // should have an inbound link per trip
-
-        Set<IdFor<Trip>> tripIdsFromFile = callingTrips.stream().
-                map(Trip::getId).
-                collect(Collectors.toSet());
-
-        tripIdsFromFile.removeAll(graphInboundTripIds);
-        assertEquals(0, tripIdsFromFile.size());
-    }
+//    private void checkInboundConsistency(Station station, Route route) {
+//        RouteStation routeStation = stationRepository.getRouteStation(station, route);
+//        assertNotNull(routeStation, "Could not find a route for " + station.getId() + " and  " + route.getId());
+//        List<Relationship> inbounds = graphQuery.getRouteStationRelationships(txn, routeStation, Direction.INCOMING);
+//
+//        List<Relationship> graphTramsIntoStation = inbounds.stream().
+//                filter(inbound -> inbound.isType(TransportRelationshipTypes.TRAM_GOES_TO)).toList();
+//
+//        long boardingCount = inbounds.stream().
+//                filter(relationship -> relationship.isType(TransportRelationshipTypes.BOARD)
+//                        || relationship.isType(TransportRelationshipTypes.INTERCHANGE_BOARD)).count();
+//        assertEquals(1, boardingCount);
+//
+//        SortedSet<IdFor<Service>> graphInboundSvcIds = graphTramsIntoStation.stream().
+//                map(GraphProps::getServiceId).collect(Collectors.toCollection(TreeSet::new));
+//
+//        Set<Trip> callingTrips =
+//                transportData.getRouteById(route.getId()).getTrips().stream().
+//                filter(trip -> trip.callsAt(station)). // calls at , but not starts at because no inbound for these
+//                //filter(trip -> !trip.getStopCalls().getStopBySequenceNumber(trip.getSeqNumOfFirstStop()).getStation().equals(station)).
+//                filter(trip -> !trip.getStopCalls().getFirstStop().getStation().equals(station)).
+//                collect(Collectors.toSet());
+//
+//        SortedSet<IdFor<Service>> svcIdsFromCallingTrips = callingTrips.stream().
+//                map(trip -> trip.getService().getId()).collect(Collectors.toCollection(TreeSet::new));
+//
+//        assertEquals(svcIdsFromCallingTrips, graphInboundSvcIds);
+//
+//        Set<IdFor<Trip>> graphInboundTripIds = graphTramsIntoStation.stream().
+//                map(GraphProps::getTripId).
+//                collect(Collectors.toSet());
+//
+//        assertEquals(graphTramsIntoStation.size(), graphInboundTripIds.size()); // should have an inbound link per trip
+//
+//        Set<IdFor<Trip>> tripIdsFromFile = callingTrips.stream().
+//                map(Trip::getId).
+//                collect(Collectors.toSet());
+//
+//        tripIdsFromFile.removeAll(graphInboundTripIds);
+//        assertEquals(0, tripIdsFromFile.size());
+//    }
 }
